# CaribConnect_ELS

./: .gitignore  Jenkinsfile  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  elasticsearch.dockerfile  release-notes.md
.github/: FUNDING.yml
.github/workflows/: add-to-project.yml  ci_cd.yml  labeler.yml  playwright.yml  test-docker-compose.yml
backend/: Dockerfile  celery_worker.dockerfile  mongodb.dockerfile  pyproject.toml
backend/app/: crud.py  logging_setup.py  main.py  models.py  utils.py  worker.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: auditInfos.py  currencies.py  customizationInfo.py  exchange_rates.py  ipAddresses.py  ip_addresses.py  items.py  login.py  mongo.py  otp.py  page_views.py  payments.py  professionals.py  profiles.py  roles.py  services.py  settings.py  theme.py  userRoles.py  users.py
backend/app/core/: concurrency.py  config.py  db.py  exceptions.py  graphDB.py  injection.py  rate_limiter.py  security.py
backend/app/helpers/: otp_helper.py  task_helpers.py
backend/app/models/: __init__.py  auditinfo.py  currency.py  customizationinfo.py  engagment_metrics.py  exchangerate.py  items.py  network_location_data.py  networklocationdata.py  otp.py  payments.py  professional.py  profile.py  role.py  service.py  services.py  settings.py  status.py  theme.py  user.py  userrole.py
backend/app/profiles/: exceptions.py
backend/app/schemas/: auditInfoSchema.py  currencySchema.py  customizationInfoSchema.py  exchangeRateSchema.py  ipvSchema.py  notificationSchema.py  otpSchema.py  paymentSchema.py  professionalSchema.py  profileSchema.py  recordSchema.py  roleSchema.py  serviceSchema.py  settingsSchema.py  themeSchema.py  userAddressSchema.py  userRoleSchema.py  userSchema.py
backend/app/services/: __init__.py  email_service.py  exchange_rate_service.py  message_queue.py  mongo_service.py  notification_service.py  payment_service.py  tasks.py  twilio_service.py
backend/app/tasks/: update_exchange_rate.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_otp.py  test_payment_service.py  test_users.py
backend/app/tests/utils/: utils.py
backend/app/workers/: celery_worker.py
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/src/client/: models.ts  schemas.ts  services.ts
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: login.tsx
frontend/src/routes/_layout/: admin.tsx  items.tsx
